[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Background/backextin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/win.gd" type="Script" id=2]
[ext_resource path="res://Assets/manutencao.png" type="Texture" id=3]
[ext_resource path="res://Assets/music/music_game.mp3" type="AudioStream" id=4]

[node name="win" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 76, 87 )
scale = Vector2( 0.337083, 0.337083 )
texture = ExtResource( 1 )
offset = Vector2( 305.563, 17.7998 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_top = 53.0
margin_right = 319.0
margin_bottom = 67.0
text = "PARABÉNS
"
align = 1

[node name="next_fase" type="Button" parent="."]
margin_left = 113.0
margin_top = 156.0
margin_right = 200.0
margin_bottom = 176.0
text = "Próxima Fase"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1.0
margin_top = 118.0
margin_right = 320.0
margin_bottom = 149.0
text = "Você sobreviveu e coletou
o máximo de mantimentos possíveis!!"
align = 1

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 163, 80 )
scale = Vector2( 0.322266, 0.322266 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 114.0
margin_top = 162.0
margin_right = 210.0
margin_bottom = 182.0
text = "Recomeçar"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="next_fase" to="." method="_on_next_fase_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
